header/cpp/General_Functions.h

////////////////////////////////////////////////////////////////////////////////////////////////////
/// <category>	Device Funktionen. </category>
/// <categoryE>	device functions. </categoryE>
///
///
/// <filesummary>	zur Steuerung der nicht kanaltyp-spezifischen Kartenfunktionen stehen diese Funktionen zur Verfügung: </filesummary>
/// <filesummaryE>	for controlling the devices non channel dependent features these functions are available: </filesummaryE>
////////////////////////////////////////////////////////////////////////////////////////////////////

// general functions
MAIV2DLL_EXPORT		ClearAllChannelLists(uint nInstance);
MAIV2DLL_EXPORT     ResetDevice(uint nInstance);
MAIV2DLL_EXPORT		LoadFirmware(uint nInstance);
MAIV2DLL_EXPORT		StartMeasure(uint nInstance);
MAIV2DLL_EXPORT		StopMeasure(uint nInstance);
MAIV2DLL_EXPORT		SetStreamingMode(uint nInstance, uint nStreamingMode);
MAIV2DLL_EXPORT		SetRunningMode(uint nInstance, uint MasterSlave);
MAIV2DLL_EXPORT		EnableSoftwareClock(uint nInstance, uint AIFetchADDataInUserMode, uint AISoftwareADBufferSizeInBursts =1);
MAIV2DLL_EXPORT		ConfigCard(uint nInstance, uint TriggerExtern, uint ExternEdge, uint DifferenzMode, uint p4);
MAIV2DLL_EXPORT		SetGlobalTriggerValues(uint nInstance, uint nPreTrigger, uint nPostTrigger, uint nWaitForStartTrigger);
MAIV2DLL_EXPORT		ConfigMeasure(uint nInstance);
MAIV2DLL_EXPORT		IdentifierDevice(uint nInstance);
MAIV2DLL_EXPORT		IsUSBHighSpeed(uint nInstance, uint* IsUSBHighSpeed);
// remoteDevice Funktionnen
MAIV2DLL_EXPORT		RemoteDeviceConnect(uint* nInstance, char* sIPAdress, int nUDPINPort, bool bShowErrorMessage , bool* bIsNewInDevicelist);
MAIV2DLL_EXPORT		RemoteDeviceDisconnect(uint nInstance);
MAIV2DLL_EXPORT		RemoteDevicesSearch();
MAIV2DLL_EXPORT		RemoteDevicesSearchAndConnectAll();
MAIV2DLL_EXPORT		RemoteDevicesGetIPFromSearchResult(int nIndex, char sIPv4Address[], int nBuffersize);
MAIV2DLL_EXPORT		RemoteDeviceGetIPFromPoolHandle(uint nInstance, char sIPv4Address[], int nBuffersize, uint* nTCPPort, int* nUDPPort);
// Eigenschaften der Karte
MAIV2DLL_EXPORT_CHAR	GetCardName(uint nInstance);
MAIV2DLL_EXPORT_CHAR	GetCardProducer(uint nInstance);
MAIV2DLL_EXPORT_CHAR	GetCardSeller(uint nInstance);
MAIV2DLL_EXPORT_CHAR	GetManufacture_Name(uint nInstance);