header/cpp/CT_Functions.h

MAIV2DLL_EXPORT CT_ScaleData(uint nInstance, uint nChannelListEntry, int pInBuffer[], double pOutBuffer[],uint nNumberOfValues, int& ARFirstLastValue);
MAIV2DLL_EXPORT CT_ReadData(uint nInstance, uint nChannelListEntry, uint pBuffer[], uint * nNumberOfValues, uint bPartBlock, uint bSkipData);
MAIV2DLL_EXPORT CT_ReadSingleValue(uint nInstance, uint nChannel, uint * SingleValue);
MAIV2DLL_EXPORT CT_GetStreamPipeLevel(uint nInstance, double * fStreamPipeLevel);
MAIV2DLL_EXPORT CT_GetNumberOfValues(uint nInstance, uint * nNumberOfValues);
MAIV2DLL_EXPORT CT_StartMeasure(uint nInstance);
MAIV2DLL_EXPORT CT_StopMeasure(uint nInstance);
MAIV2DLL_EXPORT CT_GetIncrementalCounterDirections(uint nInstance, uint* nDirectionValue);
MAIV2DLL_EXPORT CT_GetCounterMode(uint nInstance, uint nChannelListEntry,  uint* eCOUNTERMODE);
// Deprecated ConterMode Functions (may be removed in future versions):
MAIV2DLL_EXPORT CT_ImpulseCounter(uint nInstance, uint nChannel, uint nPresetValue, uint nUpDown, uint nEdge);
MAIV2DLL_EXPORT CT_FrequencyCounter(uint nInstance, uint nChannel, uint nResolution, uint nEdge, uint nEachPeriod);
MAIV2DLL_EXPORT CT_PeriodCounter(uint nInstance, uint nChannel, uint nResolution, uint nEdge, uint nEachPeriod);
MAIV2DLL_EXPORT CT_PulswidthCounter(uint nInstance, uint nChannel, uint nResolution, uint nEdge, uint nEachPeriod);
MAIV2DLL_EXPORT CT_IncrementalCounter(uint nInstance, uint nChannel, uint nResolution, uint nEdge, uint nSoftwareReset, uint nHardwareReset, uint nHWResetEdge, uint nInterpolation);
MAIV2DLL_EXPORT CT_IncrementalCounterExtensionTime(uint nInstance, uint nChannel, uint nResolution);
MAIV2DLL_EXPORT CT_IncrementalCounterExtensionFlow(uint nInstance, uint nChannel);
MAIV2DLL_EXPORT CT_UpDownCounter(uint nInstance, uint nChannel, uint nPresetValue, uint nUpDown, uint nEdge, uint nSoftwareReset);