header/python/maiv2.py

    
    _internalLObj.CT_GetCounterMode.argtypes = [ctypes.c_uint, ctypes.c_uint,  ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_GetCounterMode.restype = ctypes.c_int 
    _internalLObj.CT_GetCounterMode.errcheck = _maierrhandle
     
    _internalLObj.CT_ImpulseCounter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_ImpulseCounter.restype = ctypes.c_int 
    _internalLObj.CT_ImpulseCounter.errcheck = _maierrhandle
    
    _internalLObj.CT_FrequencyCounter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_FrequencyCounter.restype = ctypes.c_int 
    _internalLObj.CT_FrequencyCounter.errcheck = _maierrhandle
    
    _internalLObj.CT_PeriodCounter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_PeriodCounter.restype = ctypes.c_int 
    _internalLObj.CT_PeriodCounter.errcheck = _maierrhandle
    
    _internalLObj.CT_PulswidthCounter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_PulswidthCounter.restype = ctypes.c_int 
    _internalLObj.CT_PulswidthCounter.errcheck = _maierrhandle
    
    _internalLObj.CT_IncrementalCounter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_IncrementalCounter.restype = ctypes.c_int 
    _internalLObj.CT_IncrementalCounter.errcheck = _maierrhandle
    
    _internalLObj.CT_IncrementalCounterExtensionTime.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_IncrementalCounterExtensionTime.restype = ctypes.c_int 
    _internalLObj.CT_IncrementalCounterExtensionTime.errcheck = _maierrhandle
    
    
    _internalLObj.CT_IncrementalCounterExtensionFlow.argtypes = [ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_IncrementalCounterExtensionFlow.restype = ctypes.c_int 
    _internalLObj.CT_IncrementalCounterExtensionFlow.errcheck = _maierrhandle
    
    
    _internalLObj.CT_UpDownCounter.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_UpDownCounter.restype = ctypes.c_int 
    _internalLObj.CT_UpDownCounter.errcheck = _maierrhandle
    
    
    _internalLObj.CT_ScaleData.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_double), ctypes.c_uint, ctypes.POINTER(ctypes.c_int)]
    _internalLObj.CT_ScaleData.restype = ctypes.c_int 
    _internalLObj.CT_ScaleData.errcheck = _maierrhandle
    
    
    _internalLObj.CT_ReadData.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint), ctypes.POINTER(ctypes.c_uint), ctypes.c_uint, ctypes.c_uint]
    _internalLObj.CT_ReadData.restype = ctypes.c_int 
    _internalLObj.CT_ReadData.errcheck = _maierrhandle
    

    _internalLObj.CT_ReadSingleValue.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_ReadSingleValue.restype = ctypes.c_int 
    _internalLObj.CT_ReadSingleValue.errcheck = _maierrhandle
    
    
    _internalLObj.CT_GetStreamPipeLevel.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_double)]
    _internalLObj.CT_GetStreamPipeLevel.restype = ctypes.c_int 
    _internalLObj.CT_GetStreamPipeLevel.errcheck = _maierrhandle
    
    
    _internalLObj.CT_GetNumberOfValues.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_GetNumberOfValues.restype = ctypes.c_int 
    _internalLObj.CT_GetNumberOfValues.errcheck = _maierrhandle
    
    
    _internalLObj.CT_StartMeasure.argtypes = [ctypes.c_uint]
    _internalLObj.CT_StartMeasure.restype = ctypes.c_int 
    _internalLObj.CT_StartMeasure.errcheck = _maierrhandle
    
    
    _internalLObj.CT_StopMeasure.argtypes = [ctypes.c_uint]
    _internalLObj.CT_StopMeasure.restype = ctypes.c_int 
    _internalLObj.CT_StopMeasure.errcheck = _maierrhandle
    
    
    _internalLObj.CT_GetIncrementalCounterDirections.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.CT_GetIncrementalCounterDirections.restype = ctypes.c_int 
    _internalLObj.CT_GetIncrementalCounterDirections.errcheck = _maierrhandle
    
    _internalLObj.DA_SetRange.argtypes = [ctypes.c_uint, ctypes.c_uint]
    _internalLObj.DA_SetRange.restype = ctypes.c_int 
    _internalLObj.DA_SetRange.errcheck = _maierrhandle
    
    _internalLObj.DA_ClearChannelList.argtypes = [ctypes.c_uint]
    _internalLObj.DA_ClearChannelList.restype = ctypes.c_int 
    _internalLObj.DA_ClearChannelList.errcheck = _maierrhandle
    
    _internalLObj.DA_AddChannelToList.argtypes = [ctypes.c_uint, ctypes.c_uint]
    _internalLObj.DA_AddChannelToList.restype = ctypes.c_int 
    _internalLObj.DA_AddChannelToList.errcheck = _maierrhandle
    
    _internalLObj.DA_GetChannelListSize.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.DA_GetChannelListSize.restype = ctypes.c_int 
    _internalLObj.DA_GetChannelListSize.errcheck = _maierrhandle
    
    _internalLObj.DA_SetFrequency.argtypes = [ctypes.c_uint, ctypes.c_double]
    _internalLObj.DA_SetFrequency.restype = ctypes.c_int 
    _internalLObj.DA_SetFrequency.errcheck = _maierrhandle
    
    _internalLObj.DA_StartOutput.argtypes = [ctypes.c_uint]
    _internalLObj.DA_StartOutput.restype = ctypes.c_int 
    _internalLObj.DA_StartOutput.errcheck = _maierrhandle
    
    _internalLObj.DA_StopOutput.argtypes = [ctypes.c_uint]
    _internalLObj.DA_StopOutput.restype = ctypes.c_int 
    _internalLObj.DA_StopOutput.errcheck = _maierrhandle
    
    _internalLObj.DA_WriteChannelRaw.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_int]
    _internalLObj.DA_WriteChannelRaw.restype = ctypes.c_int 
    _internalLObj.DA_WriteChannelRaw.errcheck = _maierrhandle
    
    
    _internalLObj.DA_WriteChannelVoltage.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_double]
    _internalLObj.DA_WriteChannelVoltage.restype = ctypes.c_int 
    _internalLObj.DA_WriteChannelVoltage.errcheck = _maierrhandle
    
    
    _internalLObj.DA_WriteRawData.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_int), ctypes.POINTER(ctypes.c_uint), ctypes.c_uint]
    _internalLObj.DA_WriteRawData.restype = ctypes.c_int 
    _internalLObj.DA_WriteRawData.errcheck = _maierrhandle
    
    
    _internalLObj.DA_WriteScaledData.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_double), ctypes.POINTER(ctypes.c_uint), ctypes.c_uint]
    _internalLObj.DA_WriteScaledData.restype = ctypes.c_int 
    _internalLObj.DA_WriteScaledData.errcheck = _maierrhandle
    
    
    _internalLObj.DA_GetFifoState.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.DA_GetFifoState.restype = ctypes.c_int 
    _internalLObj.DA_GetFifoState.errcheck = _maierrhandle
    
    _internalLObj.DA_Audio_SetMonauralMode.argtypes = [ctypes.c_uint, ctypes.c_uint]
    _internalLObj.DA_Audio_SetMonauralMode.restype = ctypes.c_int 
    _internalLObj.DA_Audio_SetMonauralMode.errcheck = _maierrhandle
    
    
    _internalLObj.DA_Audio_SetADLoopbackMode.argtypes = [ctypes.c_uint, ctypes.c_uint]
    _internalLObj.DA_Audio_SetADLoopbackMode.restype = ctypes.c_int 
    _internalLObj.DA_Audio_SetADLoopbackMode.errcheck = _maierrhandle
    
    
    _internalLObj.ClearAllChannelLists.argtypes = [ctypes.c_uint]
    _internalLObj.ClearAllChannelLists.restype = ctypes.c_int 
    _internalLObj.ClearAllChannelLists.errcheck = _maierrhandle
    
    _internalLObj.ResetDevice.argtypes = [ctypes.c_uint]
    _internalLObj.ResetDevice.restype = ctypes.c_int 
    _internalLObj.ResetDevice.errcheck = _maierrhandle
    
    _internalLObj.LoadFirmware.argtypes = [ctypes.c_uint]
    _internalLObj.LoadFirmware.restype = ctypes.c_int 
    _internalLObj.LoadFirmware.errcheck = _maierrhandle
	
    _internalLObj.StartMeasure.argtypes = [ctypes.c_uint]
    _internalLObj.StartMeasure.restype = ctypes.c_int 
    _internalLObj.StartMeasure.errcheck = _maierrhandle
    
    
    _internalLObj.StopMeasure.argtypes = [ctypes.c_uint]
    _internalLObj.StopMeasure.restype = ctypes.c_int 
    _internalLObj.StopMeasure.errcheck = _maierrhandle
    
    _internalLObj.SetStreamingMode.argtypes = [ctypes.c_uint, ctypes.c_uint]
    _internalLObj.SetStreamingMode.restype = ctypes.c_int 
    _internalLObj.SetStreamingMode.errcheck = _maierrhandle
    
    _internalLObj.SetRunningMode.argtypes = [ctypes.c_uint, ctypes.c_uint]
    _internalLObj.SetRunningMode.restype = ctypes.c_int 
    _internalLObj.SetRunningMode.errcheck = _maierrhandle
    
    _internalLObj.EnableSoftwareClock.argtypes = [ctypes.c_uint, ctypes.c_uint]
    _internalLObj.EnableSoftwareClock.restype = ctypes.c_int 
    _internalLObj.EnableSoftwareClock.errcheck = _maierrhandle
    
    _internalLObj.ConfigCard.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.ConfigCard.restype = ctypes.c_int 
    _internalLObj.ConfigCard.errcheck = _maierrhandle
    
    
    _internalLObj.SetGlobalTriggerValues.argtypes = [ctypes.c_uint, ctypes.c_uint, ctypes.c_uint, ctypes.c_uint]
    _internalLObj.SetGlobalTriggerValues.restype = ctypes.c_int 
    _internalLObj.SetGlobalTriggerValues.errcheck = _maierrhandle
    
    
    _internalLObj.ConfigMeasure.argtypes = [ctypes.c_uint]
    _internalLObj.ConfigMeasure.restype = ctypes.c_int 
    _internalLObj.ConfigMeasure.errcheck = _maierrhandle
    
    
    _internalLObj.IdentifierDevice.argtypes = [ctypes.c_uint]
    _internalLObj.IdentifierDevice.restype = ctypes.c_int 
    _internalLObj.IdentifierDevice.errcheck = _maierrhandle
    
    _internalLObj.IsUSBHighSpeed.argtypes = [ctypes.c_uint, ctypes.POINTER(ctypes.c_uint)]
    _internalLObj.IsUSBHighSpeed.restype = ctypes.c_int 
    _internalLObj.IsUSBHighSpeed.errcheck = _maierrhandle
    
    
    
    _internalLObj.RemoteDeviceConnect.argtypes = [ctypes.c_uint, ctypes.c_char_p , ctypes.c_int, ctypes.c_bool, ctypes.POINTER(ctypes.c_bool)] 
    _internalLObj.RemoteDeviceConnect.restype = ctypes.c_int 
    _internalLObj.RemoteDeviceConnect.errcheck = _maierrhandle    
    
    _internalLObj.RemoteDeviceDisconnect.argtypes = [ctypes.c_uint]
    _internalLObj.RemoteDeviceDisconnect.restype = ctypes.c_int 
    _internalLObj.RemoteDeviceDisconnect.errcheck = _maierrhandle   

    _internalLObj.RemoteDevicesSearch.argtypes = []
    _internalLObj.RemoteDevicesSearch.restype = ctypes.c_int 
    _internalLObj.RemoteDevicesSearch.errcheck = _maierrhandle   
    
    _internalLObj.RemoteDevicesSearchAndConnectAll.argtypes = []
    _internalLObj.RemoteDevicesSearchAndConnectAll.restype = ctypes.c_int 
    _internalLObj.RemoteDevicesSearchAndConnectAll.errcheck = _maierrhandle   
    
    _internalLObj.RemoteDevicesGetIPFromSearchResult.argtypes = [ctypes.c_uint, ctypes.c_char_p , ctypes.c_int ] 
    _internalLObj.RemoteDevicesGetIPFromSearchResult.restype = ctypes.c_int 
    _internalLObj.RemoteDevicesGetIPFromSearchResult.errcheck = _maierrhandle   
    
    _internalLObj.RemoteDeviceGetIPFromPoolHandle.argtypes  = [ctypes.c_uint, ctypes.c_char_p , ctypes.c_int, ctypes.POINTER(ctypes.c_uint), ctypes.POINTER(ctypes.c_int)]
    _internalLObj.RemoteDeviceGetIPFromPoolHandle.restype = ctypes.c_int 
    _internalLObj.RemoteDeviceGetIPFromPoolHandle.errcheck = _maierrhandle   
    

    _internalLObj.GetCardName.argtypes = [ctypes.c_uint]
    _internalLObj.GetCardName.restype = ctypes.c_char_p
    
    _internalLObj.GetCardProducer.argtypes = [ctypes.c_uint]
    _internalLObj.GetCardProducer.restype = ctypes.c_char_p

    _internalLObj.GetCardSeller.argtypes = [ctypes.c_uint]
    _internalLObj.GetCardSeller.restype = ctypes.c_char_p
    
    _internalLObj.GetManufacture_Name.argtypes = [ctypes.c_uint]
    _internalLObj.GetManufacture_Name.restype = ctypes.c_char_p
